--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <input type="image" id="bookmark--ribbon" src="./img/ribbon-svgrepo-com.png" alt="ribbon" data-js="bookmarkToggle"/>
             <article class="first--card">
                 <p class="question">Lorem ipsum dolor sit amet, consectetur adipisicing elit?</p>
-                <button class="answer--button" data-js="showAnswer">Show answer</button>
-                <p class="answer--text">This is the answer</p>
+                <button onclick="toggle('showAnswer')" class="answer--button" data-js="showAnswer">Show answer</button>
+                <p class="answer--text" id="showAnswer" hidden>This is the answer</p>
                 <ul class="hashtags">
                     <li><button>#html</button></li>
                     <li><button>#flexbox</button></li>
@@ -29,8 +29,8 @@
             <input type="image" id="bookmark--ribbon" src="./img/ribbon-svgrepo-com.png" alt="ribbon" data-js="bookmarkToggleTwo"/>
             <article class="second--card">
                 <p class="question">Lorem ipsum dolor sit amet, consectetur adipisicing elit?</p>
-                <button class="answer--button" data-js="showAnswer">Show answer</button>
-                <p class="answer--text">This is the answer</p>
+                <button onclick="toggle1('showAnswer1')" class="answer--button" data-js="showAnswer">Show answer</button>
+                <p class="answer--text" id="showAnswer1" hidden>This is the answer</p>
                 <ul class="hashtags">
                     <li><button>#html</button></li>
                     <li><button>#flexbox</button></li>
@@ -43,8 +43,8 @@
            <input type="image" id="bookmark--ribbon" src="./img/ribbon-svgrepo-com.png" alt="ribbon" data-js="bookmarkToggleThree"/>
             <article class="third--card">
                 <p class="question">Lorem ipsum dolor sit amet, consectetur adipisicing elit?</p>
-                <button class="answer--button" data-js="showAnswer">Show answer</button>
-                <p class="answer--text">This is the answer</p>
+                <button onclick="toggle2('showAnswer2')" class="answer--button" data-js="showAnswer">Show answer</button>
+                <p class="answer--text" id="showAnswer2" hidden>This is the answer</p>
                 <ul class="hashtags">
                     <li><button>#html</button></li>
                     <li><button>#flexbox</button></li>
